--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@
   text-shadow: 2px 2px 3px white;
 }
 
-.weather {
+.weather { /*the weather conditions are styled using this class*/
   font-size: 2.6rem;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   color: white;
