--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
   font-style: italic;
 }
 
-.heading {
+.heading { //styles the heading element
   font-size: 2.3rem;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
