--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .container {
   display: flex; /*makes the container a flex container to better position my elements on the webpage*/
-  flex-direction: column;
+  flex-direction: column;/* sets the content to be displayed in a column down the center of the webpage*/
   padding: 30px;
   height: 100vh;
   justify-content: center;
