--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
 }
 
 .input {
-  /*I changed the default size of the input field and it's input font specifications using the declarations below*/
+  /*I changed the default size of the input field and it's input font using the declarations below*/
   width: 70%;
   padding: 10px;
   margin: auto;
