--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .container {
   display: flex; /*makes the container a flex container to better position my elements*/
-  flex-direction: column;/* sets the content to be displayed in a column down the center of the webpage*/
+  flex-direction: column; /* sets the content to be displayed in a column down the center of the webpage*/
   padding: 30px;
   height: 100vh;
   justify-content: center;
@@ -19,7 +19,8 @@
   font-style: italic;
 }
 
-.heading { //styles the heading element
+/* styles the heading element */
+.heading {
   font-size: 2.3rem;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
@@ -48,7 +49,8 @@
   text-shadow: 2px 2px 3px white;
 }
 
-.weather { /*the weather conditions information are styled using this class*/
+.weather {
+  /*the weather conditions information are styled using this class*/
   font-size: 2.6rem;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   color: white;
