--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
 .container {
   display: flex; /*makes the container a flex container to better position my elements*/
   flex-direction: column; /* sets the content to be displayed in a column down the center of the webpage*/
-  padding: 30px;
+  padding: 10px;
   height: 100vh;
   justify-content: center;
   align-items: center;
-  background-image: url("https://live.staticflickr.com/65535/49591203887_d2c90ebf56_b.jpg");
+  background-image: url("skyline.jpeg");
   background-size: cover; /*this declaration makes my background image cover the full screen */
   text-align: center; /* neatly centers all the text in the container div*/
 }
