--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
-/* :root {
+/* 
+default styles
+:root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
