--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .container {
-  display: flex; /*makes the container a flex container to better position my elements*/
+  display: flex; /*makes the container a flex container to better position the elements*/
   flex-direction: column; /* sets the content to be displayed in a column down the center of the webpage*/
   padding: 10px;
   flex-direction: column; /* sets the content to be displayed in a column layout down the center of the webpage*/
