--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   display: flex; /*makes the container a flex container to better position the elements on the webpage*/
   flex-direction: column; /* sets the content to be displayed in a column down the center of the webpage*/
   padding: 10px;
-  flex-direction: column; /* sets the content to be displayed in a column layout down the center of the webpage*/
+  flex-direction: column; /* sets the content to be displayed in a column down the center of the webpage*/
   padding: 30px;
   height: 100vh;
   justify-content: center;
