--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
   font-style: italic;
 }
 
-/* styles the heading element */
+/* styles the heading element of the application */
 .heading {
   font-size: 2.3rem;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
