--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 /* 
-default styles
+default styles that are applied 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
